reformatted code and fixed app-container overflow

--- a/vibecheck/src/App.scss
+++ b/vibecheck/src/App.scss
@@ -10,8 +10,6 @@
 * {
   font-size: 18px;
   margin: 0;
-  //background: rgb(238,174,202);
-  //background: linear-gradient(90deg, rgba(238,174,202,1) 0%, rgba(148,187,233,1) 100%);
 }
 
 /*@media only screen and (max-width: 560px) {
@@ -24,6 +22,8 @@
 font-family: "Work Sans", sans-serif;
 background: linear-gradient(90deg, rgba(238,174,202,1) 0%, rgba(148,187,233,1) 100%);
 height: 100%;
+position: relative;
+padding: 0;
 
 
 .app-header {
