--- a/vibecheck/src/components/searchbar/SearchBarStyle.scss
+++ b/vibecheck/src/components/searchbar/SearchBarStyle.scss
@@ -9,85 +9,86 @@
   width: 100%;
 
   ul {
-display: flex;
-  justify-content: center;
-  margin-bottom: 2.22rem;
-  color: #eaeaebeb;
-}
-
-.SearchBarSortOptions li {
-  cursor: pointer;
-  width: 70%;
-  border-bottom: 1px solid #fff;
-  padding: 0 2.58rem 0.33rem 2.58rem;
-  line-height: 1.13;
-  text-align: center;
-  font-weight: 600;
-  font-size: 0.83rem;
-  transition: color 0.25s;
-  list-style: none;
-  background:none;
-  &:hover {
-    color: rgb(238,174,202);
+    display: flex;
+    justify-content: center;
+    margin-bottom: 2.22rem;
+    color: #eaeaebeb;
   }
 
-  &:active {
-    color: #d4cfcf;
+  .SearchBarSortOptions li {
+    cursor: pointer;
+    width: 70%;
+    border-bottom: 1px solid #fff;
+    padding: 0 2.58rem 0.33rem 2.58rem;
+    line-height: 1.13;
+    text-align: center;
+    font-weight: 600;
+    font-size: 0.83rem;
+    transition: color 0.25s;
+    list-style: none;
+    background: none;
+
+    &:hover {
+      color: rgb(238, 174, 202);
+    }
+
+    &:active {
+      color: rgb(73, 43, 220);
+    }
+
+    &:active:hover {
+      border-bottom: 1px solid rgb(73, 43, 220);
+      color: rgb(73, 43, 220);
+    }
   }
 
-  &:active:hover {
-    border-bottom: 1px solid rgb(73, 43, 220);
-    color: rgb(73, 43, 220);
-  }
-}
+  .SearchBarFields {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 2.88rem;
+    background: none;
 
-.SearchBarFields {
-  display: flex;
-  justify-content: center;
-  margin-bottom: 2.88rem;
-  background: none;
+    input {
+      width: 21rem;
+      padding: 0.66rem 1rem;
+      margin-right: 2.22rem;
+      border: 1px solid #fff;
+      border-radius: 4px;
+      font-size: 0.77rem;
+      font-weight: 500;
+      background: rgb(238, 174, 202, 0.3);
+      border: rgb(73, 43, 220);
+      color: rgb(238, 174, 202);
+    }
 
-  input {
-    width: 21rem;
-    padding: 0.66rem 1rem;
-    margin-right: 2.22rem;
-    border: 1px solid #fff;
-    border-radius: 4px;
-    font-size: 0.77rem;
-    font-weight: 500;
-    background: rgb(238,174,202, 0.3);
-    border:rgb(73, 43, 220);
-    color: rgb(238,174,202);
-  }
-  
-  input::placeholder {
-    color: rgb(73, 43, 220);
-    opacity: 1;
+    input::placeholder {
+      color: rgb(73, 43, 220);
+      opacity: 1;
     }
 
     input:focus {
-      color: rgb(238,174,202);
+      color: rgb(238, 174, 202);
     }
-}
-
-.submit-container {
-  text-align: center;
-
-  button {
-  border-radius: 4px;
-  padding: 0.72rem 1.7rem;
-  background-color: rgb(238,174,202);
-  color: #ffffff;
-  font-weight: 600;
-  transition: background-color 0.5s;
-  border: 0;
-
-  &:hover {
-    cursor: pointer;
-    background-color: rgba(148,187,233,1);
   }
-}
-}
+
+  .submit-container {
+    text-align: center;
+
+    button {
+      border-radius: 4px;
+      padding: 0.72rem 1.7rem;
+      background-color: rgb(238, 174, 202);
+      color: #ffffff;
+      font-weight: 600;
+      transition: background-color 0.5s;
+      border: 0;
+
+      &:hover {
+        cursor: pointer;
+        background-color: rgba(148, 187, 233, 1);
+      }
+    }
+  }
 }
 
 @media only screen and (max-width: 560px) {
